--- a/styles/style.css
+++ b/styles/style.css
@@ -83,29 +83,45 @@ body {
       top: 300px;
   }
 
-  .header >.header__title{
-     margin :10%;
+  .header__datos{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-around;
+
+
   }
-  header__right_title + header__img {
-   
-    margin-left: 80%;
-    
+  .header__middle_title{
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    font-size: 20px;
+  }
+
+  
+     
+ 
+  .Container{
+    display: flex;
+    flex-wrap: wrap;
+    margin: 5%;
+
 
   }
 
-  .containeraboutMe > .containeraboutMe__video{
-  float: left;
-  margin-left: 5%;
-  max-width: 50%;
+  .containeraboutMe >.containeraboutMe__contenedor{
+    display: flex;
+    flex-direction: row;
 
   }
-  .containeraboutMe > .containeraboutMe__contain2{
+
+  
+  .containeraboutMe__contenedor > .containeraboutMe__cita {
+  
     font-family: 'Indie Flower', cursive;
-    display: inline;
-  
-    float: right;
-    max-width: 50%;
-  
+    font-size: 20px;
+    margin: 2%;
+   
     }
   
   
