--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,9 @@
+
 body {
    background-color: rgb(248, 246, 232);
    --main-text-color: #f7f7f7;
    --secondary-text-color: #a4a4a4;
+   font-family: 'Indie Flower', cursive;
    
    }
 
@@ -55,15 +57,15 @@ body {
   }
 
   .header > .container-photo {
+    display: flex;
     margin: 0;
     width: 100%;
     
-    background-color: aqua;
+
 
   }
 .container-photo > .header__img{
-      display: flex;
-      align-self:auto;
+   
       height: 400px;
       width: 100%;
       top:100px;
@@ -73,32 +75,33 @@ body {
 
      
   }
-  .container-photo > .header__foto{
-     position: absolute;
-      width: 250px;
-      height: 250px;
-      border-radius: 50%;
-      border: 5px solid rgb(253, 253, 253);
-      left:40%;
-      top: 300px;
-  }
+  
 
   .header__datos{
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: space-around;
+    margin: 2%;
 
 
   }
-  .header__middle_title{
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    font-size: 20px;
+  .header >.container-image{
+   position: relative;
+    font-size: 30px;
+    left: 40%;
+     top: -100px;
+     overflow: hidden;
+  }
+  .container-image > .header__foto{
+    
+     width: 200px;
+     height: 200px;
+     border-radius: 50%;
+     border: 5px solid rgb(253, 253, 253);
+     
   }
 
-  
      
  
   .Container{
@@ -109,16 +112,30 @@ body {
 
   }
 
+  .Container >.ContainersqSoy__title{
+
+    position: absolute;
+    color: var(--secondary-text-color);
+    
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    visibility: hidden;
+  }
+  
+
+
   .containeraboutMe >.containeraboutMe__contenedor{
     display: flex;
-    flex-direction: row;
+    
+    
 
   }
 
   
   .containeraboutMe__contenedor > .containeraboutMe__cita {
-  
-    font-family: 'Indie Flower', cursive;
     font-size: 20px;
     margin: 2%;
    
@@ -127,6 +144,7 @@ body {
   
 
   .footer {
+    display: flex;
     background-color: rgba(0, 0, 0, 0.92);
     color: var(--main-text-color);
     height: 50px;
