--- a/styles/style.css
+++ b/styles/style.css
@@ -62,8 +62,6 @@ body {
     background-position: center center;
     margin: 0%;
     height: 100vh;
-   
-    
     
   }
 
@@ -76,18 +74,14 @@ body {
 
   }
 .container-photo > .header__img{
-  
-
-   
       height: 400px;
       width: 100%;
       top:100px;
       border-bottom: 5px;
       border-bottom-style: solid;
       border-bottom-color: white;
-
-     
   }
+
   .header >.container-image{
     position: relative;
      left: 40%;
@@ -101,12 +95,10 @@ body {
     flex-direction: row;
     justify-content: space-around;
     margin: 2%;
-
-
   }
+
   
   .container-image > .header__foto{
-    
      width: 200px;
      height: 200px;
      border-radius: 50%;
@@ -120,23 +112,51 @@ body {
     display: flex;
     flex-wrap: wrap;
     margin: 5%;
-
-
-  }
-
-  .Container >.ContainersqSoy__title{
-
-    position: absolute;
-    color: var(--secondary-text-color);
     
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    visibility: hidden;
   }
+
   
+
+  .Container >.ContainersqSoy{
+
+   
+  
+
+
+
+  }
+  .Containstudies__contain {
+    display: flex;
+    flex-flow: wrap;
+    
+        
+    
+
+  }
+  .Containstudies__contain >.contain_list_item{
+  
+    
+    
+    align-items: center;
+    justify-content: center;
+    flex: 1;
+    
+    
+   
+    
+
+  }
+  .contain_list_item > img{
+
+    max-width: 100%;
+    max-height: 200px;
+
+  }
+  .contain_list_item > h4{
+
+    font-size: 20px;
+
+  }
 
 
   .containeraboutMe >.containeraboutMe__contenedor{
@@ -148,9 +168,40 @@ body {
 
   
   .containeraboutMe__contenedor > .containeraboutMe__cita {
+    display: flex;
     font-size: 20px;
     margin: 2%;
+    
+
    
+    }
+    .Containercontacto{
+      display: flex;
+
+    }
+    .form{
+      margin: 2rem;
+      padding: 1.2rem;
+
+    }
+
+    .form.form-row{
+      margin-top: 2rem;
+
+      padding: 0.8;
+
+    }
+    input{
+      padding:0.5rem;
+      border: 0.1rem solid wheat;
+
+    }
+
+    button[type="submit"]{
+      background-color: beige;
+      padding: 1rem 4rem;
+      border-radius: 5%;
+      cursor: pointer;
     }
   
   
