--- a/styles/style.css
+++ b/styles/style.css
@@ -118,6 +118,10 @@ body {
 
   .Container >.title{
     border: 0.1rem solid wheat;
+    margin-right: 85%;
+    padding: 15px;
+    background-color: rgb(238, 230, 215);
+
   }
 
   .ContainersqSoy{
@@ -206,7 +210,7 @@ body {
 
     }
     .form{
-      margin: 0 30% 5% 30% ;
+      margin: 0 20% 5% 20% ;
       padding: 1.2rem;
       border: 0.1rem solid wheat;
       color: #f7f7f7;
@@ -243,7 +247,7 @@ body {
     display: flex;
     background-color: rgba(0, 0, 0, 0.92);
     color: var(--main-text-color);
-    height: 50px;
+    height: 100px;
     align-items: center;
     justify-content: center;
     bottom: 0;  
