--- a/styles/style.css
+++ b/styles/style.css
@@ -22,6 +22,7 @@ body {
   top: 0;
   width:100%;
   background-color: rgb(238, 230, 215);
+  height: 50px;
 }
 .navbar > .navbar__list {
  
@@ -47,7 +48,11 @@ body {
     color: rgba(0, 0, 0, 0.9);
     right: 0%;
   }
-  
+  .navbar > .navbar__list > .navbar__item--active a {
+    color: #f7f7f7;
+    background-color:  rgb(165, 140, 94);
+    height: 50px;
+  }
  
   
   .navbar > .navbar__list > .navbar__item a:hover {
@@ -55,6 +60,8 @@ body {
    background-color:  rgb(165, 140, 94);
    font-size: 1.5rem;
    border-radius: 5%;
+   height: 50px;
+   
   }
   .header{
     background-image: url(./images/backgroundWood.jpg);
